[project]
name = "s4-slicer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "open3d>=0.19.0",
    "pygcode>=0.2.1",
    "pyvista>=0.45.0",
    "scipy>=1.15.2",
    "tetgen>=0.6.5",
]
